<resources>
    <string name="app_name">Pantri</string>
    <string name="input_hint">Put ingredients here</string>
    <string name="get_recipes">GET</string>
    <string name="button">get meals</string>
    <string name="title_activity_pantri_storage">PantriStorage</string>
    <string name="passwordBox">Enter Password</string>
    <string name="emailBox">Enter E-mail</string>
    <string name="sign_up_Box">Sign up!</string>
    <string name="log_in_button">Log in</string>
    <string name="item_name" />
    <string name="item_label">Item Type</string>
    <string name="count_label">boxes, lbs, etc</string>
    <string name="amount_label">Amount</string>
    <string name="storage_nav_button">Recipes</string>
    <string name="add_item_button">Add Item</string>
    <string name="to_pantri_button">Pantri</string>
    <string name="add_item_hint">Add new item to Storage</string>
    <string name="add_count_hint">3</string>
    <string name="add_type_hint">Lbs, bunches, etc</string>

</resources>
